# SmartTV-Alpha-X

./: .gitignore  CMakeLists.txt  Dockerfile  README.md  database.csv  dateTV.csv  documentatie.json  endpoints.h  input_user.json  openapi.yaml  output_favorite.json  output_recomandari.json  output_sugestii.json  server.h  smartTv.h  text.out  users.csv
data_files/: accounts.csv
